LPS-166921 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -4634,6 +4634,7 @@ current-site-role-ids=Current Site Role IDs
 current-step=Current Step
 current-theme=Current Theme
 current-title=Current Title
+current-translation-is-x-press-enter-to-select-another-language=Current translation is {0}, press enter to select another language.
 current-url=Current URL
 current-url-help=Represents the URL that was used to make the current request to the portal.
 current-user=Current User
@@ -4967,6 +4968,7 @@ default-teams-assignment-help=Select the teams that the newly assigned site memb
 default-template=Default Template
 default-template-shorten=Default Template (Shorten)
 default-theme=Default Theme
+default-translation-is-x=Default translation is {0}.
 default-user-associations=Default User Associations
 default-user-password=Default User Password
 default-value=Default Value
@@ -8820,34 +8822,48 @@ language.da=Danish
 language.de=German
 language.el=Greek
 language.en=English
+language.en_AU=English (Australia)
+language.en_GB=English (England)
 language.es=Spanish
 language.es_AR=Spanish (Argentina)
 language.es_CO=Spanish (Colombia)
 language.es_MX=Spanish (Mexico)
 language.et=Estonian
+language.eu=Basque
+language.fa=Persian
 language.fi=Finnish
 language.fr=French
+language.fr_CA=French (Canada)
+language.gl=Galician
 language.hi_IN=Hindi
+language.hr=Croatian
 language.ht=Haitian Creole
 language.hu=Hungarian
 language.in=Indonesian
 language.it=Italian
 language.iw=Hebrew
 language.ja=Japanese
+language.kk=Kazakh
 language.ko=Korean
+language.lo=Lao
 language.lt=Lithuanian
 language.lv=Latvian
 language.ms=Malay
 language.mww=Hmong Daw
 language.nb=Norwegian
 language.nl=Dutch
+language.nl_BE=Dutch (Belgium)
 language.pl=Polish
 language.pt_PT=Portuguese
+language.pt_BR=Portuguese (Brazil)
 language.ro=Romanian
 language.ru=Russian
 language.sk=Slovak
 language.sl=Slovenian
+language.sr_RS=Serbian
+language.sr_RS_latin=Serbian Latinica
 language.sv=Swedish
+language.ta=Tamil
 language.th=Thai
 language.tr=Turkish
 language.uk=Ukranian
@@ -10907,6 +10923,7 @@ not-staged=Not Staged
 not-started=Not Started
 not-supported=Not Supported
 not-translated=Not Translated
+not-translated-into-x=Not translated into {0}.
 not-visible=Not Visible
 not-x=Not {0}?
 note=Note
@@ -12574,6 +12591,7 @@ presentation-settings=Presentation Settings
 presets=Presets
 press-enter-to-add-x-field=Press enter to add {0} field.
 press-enter-to-choose-this-field-set-or-use-arrow-keys-to-navigate-through-the-available-field-sets.-press-escape-at-anytime-to-close-this-dialog=Press enter to choose this field set or use arrow keys to navigate through the available field sets. Press escape at any time to close this dialog.
+press-enter-to-edit-x-translation=Press enter to edit {0} translation.
 press-escape-to-remove-the-bar's-category-filters=Press escape to remove the bar's category filters.
 press-release=Press Release
 press-the-button-below-to-obtain-your-one-time-password-it-will-be-sent-to-x=Press the button below to obtain your one-time password. It will be sent to {0}.
@@ -17778,6 +17796,7 @@ transitions=Transitions
 translate=Translate
 translate-from=Translate From
 translated=Translated
+translated-into-x=Translated into {0}.
 translating=Translating
 translating-web-content-to-x=Translating Web Content to {0}
 translation=Translation
