--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/build.gradle
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/build.gradle
@@ -21,4 +21,6 @@ dependencies {
 	testCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-form-field-type")
 	testCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-service")
 	testCompile project(":apps:dynamic-data-mapping:dynamic-data-mapping-test-util")
+	testCompile project(":apps:list-type:list-type-api")
+	testCompile project(":apps:object:object-api")
 }
