--- a/test.properties
+++ b/test.properties
@@ -956,6 +956,7 @@
     sql.legacy.zip[7.4.12]=liferay-dxp-sql-7.4.12-ep3-20210728022041024.zip
     sql.legacy.zip[7.4.13]=liferay-dxp-sql-7.4.13-ga1-20211020105546063.zip
     sql.legacy.zip[7.4.13.u33]=liferay-dxp-sql-7.4.13.u33-20220711205130472.zip
+    sql.legacy.zip[7.4.13.u43]=liferay-dxp-sql-7.4.13.u43-20220921115534577.zip
 
 ##
 ## SSH
