Regen portal-impl/src/portal-osgi-configuration.properties

--- a/portal-impl/src/portal-osgi-configuration.properties
+++ b/portal-impl/src/portal-osgi-configuration.properties
@@ -2851,9 +2851,9 @@
     #
     #configuration.override.com.liferay.knowledge.base.configuration.KBGroupServiceConfiguration_emailKBArticleSuggestionResolvedBody=
     #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_KNOWLEDGE_PERIOD_BASE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEK__UPPERCASEB__UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLE_UPPERCASER__UPPERCASES__UPPERCASES_
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_KNOWLEDGE_PERIOD_BASE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEK__UPPERCASEB__UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_ENABLE_UPPERCASER_SS
     #
-    #configuration.override.com.liferay.knowledge.base.configuration.KBGroupServiceConfiguration_enableRSS=
+    #configuration.override.com.liferay.knowledge.base.configuration.KBGroupServiceConfiguration_enableRss=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_KNOWLEDGE_PERIOD_BASE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEK__UPPERCASEB__UPPERCASEG_ROUP_UPPERCASES_ERVICE_UPPERCASEC_ONFIGURATION_UNDERLINE_RSS_UPPERCASED_ELTA
     #
@@ -3219,6 +3219,10 @@
     #
     #configuration.override.com.liferay.layout.set.prototype.configuration.LayoutSetPrototypeConfiguration_cancelPropagationImportTask=
     #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LAYOUT_PERIOD_SET_PERIOD_PROTOTYPE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEL_AYOUT_UPPERCASES_ET_UPPERCASEP_ROTOTYPE_UPPERCASES_YSTEM_UPPERCASEC_ONFIGURATION_UNDERLINE_IMPORT_UPPERCASET_ASK_UPPERCASEI_SOLATION
+    #
+    #configuration.override.com.liferay.layout.set.prototype.configuration.LayoutSetPrototypeSystemConfiguration_importTaskIsolation=
+    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_LOGIN_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEA_UTH_UPPERCASEL_OGIN_UPPERCASEC_ONFIGURATION_UNDERLINE_PROMPT_UPPERCASEE_NABLED
     #
     #configuration.override.com.liferay.login.web.internal.configuration.AuthLoginConfiguration_promptEnabled=
@@ -3566,6 +3570,14 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PASSWORD_PERIOD_POLICIES_PERIOD_ADMIN_PERIOD_WEB_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEP_ASSWORD_UPPERCASEP_OLICIES_UPPERCASEC_ONFIGURATION_UNDERLINE_RESET_UPPERCASEF_AILURE_UPPERCASED_URATIONS
     #
     #configuration.override.com.liferay.password.policies.admin.web.internal.configuration.PasswordPoliciesConfiguration_resetFailureDurations=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_BACKGROUND_PERIOD_TASK_PERIOD_CONFIGURATION_PERIOD__UPPERCASEB_ACKGROUND_UPPERCASET_ASK_UPPERCASEM_ANAGER_UPPERCASEC_ONFIGURATION_UNDERLINE_WORKERS_UPPERCASEC_ORE_UPPERCASES_IZE
+    #
+    #configuration.override.com.liferay.portal.background.task.configuration.BackgroundTaskManagerConfiguration_workersCoreSize=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_BACKGROUND_PERIOD_TASK_PERIOD_CONFIGURATION_PERIOD__UPPERCASEB_ACKGROUND_UPPERCASET_ASK_UPPERCASEM_ANAGER_UPPERCASEC_ONFIGURATION_UNDERLINE_WORKERS_UPPERCASEM_AX_UPPERCASES_IZE
+    #
+    #configuration.override.com.liferay.portal.background.task.configuration.BackgroundTaskManagerConfiguration_workersMaxSize=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_CACHE_PERIOD_MULTIPLE_PERIOD_CONFIGURATION_PERIOD__UPPERCASEP_ORTAL_UPPERCASEC_ACHE_UPPERCASEC_LUSTER_UPPERCASEC_ONFIGURATION_UNDERLINE_PRIORITIES
     #
@@ -4050,10 +4062,6 @@
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_SEARCH_PERIOD_CONFIGURATION_PERIOD__UPPERCASEI_NDEXER_UPPERCASER_EGISTRY_UPPERCASEC_ONFIGURATION_UNDERLINE_BUFFERED
     #
     #configuration.override.com.liferay.portal.search.configuration.IndexerRegistryConfiguration_buffered=
-    #
-    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_SEARCH_PERIOD_CONFIGURATION_PERIOD__UPPERCASEI_NDEXER_UPPERCASER_EGISTRY_UPPERCASEC_ONFIGURATION_UNDERLINE_BUFFERED_UPPERCASEE_XECUTION_UPPERCASEM_ODE
-    #
-    #configuration.override.com.liferay.portal.search.configuration.IndexerRegistryConfiguration_bufferedExecutionMode=
     #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_SEARCH_PERIOD_CONFIGURATION_PERIOD__UPPERCASEI_NDEXER_UPPERCASER_EGISTRY_UPPERCASEC_ONFIGURATION_UNDERLINE_MAX_UPPERCASEB_UFFER_UPPERCASES_IZE
     #
