--- a/modules/apps/portal-remote/portal-remote-jaxrs-whiteboard-jaxb-json/build.gradle
+++ b/modules/apps/portal-remote/portal-remote-jaxrs-whiteboard-jaxb-json/build.gradle
@@ -5,12 +5,15 @@ dependencies {
 	compileOnly group: "com.fasterxml.jackson.jaxrs", name: "jackson-jaxrs-base", version: "2.9.8"
 	compileOnly group: "com.fasterxml.jackson.jaxrs", name: "jackson-jaxrs-json-provider", version: "2.9.8"
 	compileOnly group: "com.fasterxml.jackson.module", name: "jackson-module-jaxb-annotations", version: "2.9.8"
-	compileOnly group: "org.apache.aries.jax.rs", name: "org.apache.aries.jax.rs.jackson", version: "1.0.2"
+	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly group: "org.apache.geronimo.specs", name: "geronimo-jaxrs_2.1_spec", version: "1.1"
+	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.4.0"
+	compileOnly group: "org.osgi", name: "org.osgi.service.jaxrs", version: "1.0.0"
+	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 }
 
 deployDependencies {
 	from (configurations.compileOnly) {
-		include "org.apache.aries.jax.rs.jackson-*.jar"
 		include "jackson-jaxrs-base-*.jar"
 		include "jackson-jaxrs-json-provider-*.jar"
 		include "jackson-module-jaxb-annotations-*.jar"
