--- a/modules/apps/layout/layout-utility-page-test/build.gradle
+++ b/modules/apps/layout/layout-utility-page-test/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	testIntegrationCompile project(":apps:info:info-api")
 	testIntegrationCompile project(":apps:journal:journal-api")
 	testIntegrationCompile project(":apps:journal:journal-test-util")
+	testIntegrationCompile project(":apps:layout:layout-admin-api")
 	testIntegrationCompile project(":apps:layout:layout-api")
 	testIntegrationCompile project(":apps:layout:layout-page-template-api")
 	testIntegrationCompile project(":apps:layout:layout-test-util")
