--- a/modules/apps/portal/portal-instance-lifecycle-impl/build.gradle
+++ b/modules/apps/portal/portal-instance-lifecycle-impl/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	compileOnly project(":apps:portal:portal-aop-api")
 	compileOnly project(":apps:portal:portal-instance-lifecycle-api")
+	compileOnly project(":core:osgi-service-tracker-collections")
 	compileOnly project(":core:petra:petra-function")
 	compileOnly project(":core:petra:petra-lang")
 }
