--- a/test.properties
+++ b/test.properties
@@ -7350,6 +7350,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         **/commerce/**/*Test.java,\
         **/headless-admin-taxonomy-test/**/TaxonomyVocabularyResourceTest.java,\
         **/module-configuration-localization-test/**/ModuleConfigurationLocalizationTest.java,\
+        **/object/**/*Test.java,\
         **/portal-search/**/SearchResponseGetSearchTimeValueTest.java,\
         **/portal-search-elasticsearch7/**/*Test.java,\
         **/portal-search-tuning-synonyms-web-test/**/*Test.java,\
