--- a/modules/apps/static/portal-file-install/portal-file-install-test/build.gradle
+++ b/modules/apps/static/portal-file-install/portal-file-install-test/build.gradle
@@ -3,5 +3,7 @@ dependencies {
 	testIntegrationCompile group: "org.osgi", name: "org.osgi.service.cm", version: "1.6.0"
 	testIntegrationCompile group: "org.osgi", name: "osgi.core", version: "6.0.0"
 	testIntegrationCompile project(":apps:portal-configuration:portal-configuration-test-util")
+	testIntegrationCompile project(":apps:static:osgi:osgi-util")
+	testIntegrationCompile project(":apps:static:portal-file-install:portal-file-install-api")
 	testIntegrationCompile project(":test:arquillian-extension-junit-bridge")
 }
