LPS-171824 Add language key reminder-query-answer

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -13212,6 +13212,7 @@ reminder=Reminder
 reminder-email=Reminder Email
 reminder-queries=Reminder Queries
 reminder-query-and-answer-cannot-be-empty=Reminder query and answer cannot be empty.
+reminder-query-answer=Reminder Query Answer
 reminder-query-question=Reminder Query Question
 reminders=Reminders
 remote=Remote
