LPS-171824 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -13206,6 +13206,7 @@ reminder=Podsetnik
 reminder-email=Reminder Email (Automatic Copy)
 reminder-queries=Podsetnik Upiti
 reminder-query-and-answer-cannot-be-empty=Podsetnik upit i odgovor ne može biti prazan.
+reminder-query-answer=Reminder Query Answer (Automatic Copy)
 reminder-query-question=Reminder Query Question (Automatic Copy)
 reminders=Reminders (Automatic Copy)
 remote=Remote (Automatic Copy)
