LRCI-3382 Add relationships between asah & faro for subrepository pulls

--- a/test.properties
+++ b/test.properties
@@ -1180,7 +1180,14 @@
         subrepository-unit-jdk8
 
     test.batch.osb.asah.github.url=https://github.com/liferay/com-liferay-osb-asah-private/tree/latest
+    test.batch.osb.asah.github.url[com-liferay-osb-faro-private][3.1.x]=https://github.com/liferay/com-liferay-osb-asah-private/tree/3.4.x
+    test.batch.osb.asah.github.url[com-liferay-osb-faro-private][7.1.x]=https://github.com/liferay/com-liferay-osb-asah-private/tree/7.0.x
+
     test.batch.osb.faro.github.url=https://github.com/liferay/com-liferay-osb-faro-private/tree/latest
+    test.batch.osb.faro.github.url[com-liferay-osb-asah-private][3.4.x]=https://github.com/liferay/com-liferay-osb-faro-private/tree/3.1.x
+    test.batch.osb.faro.github.url[com-liferay-osb-asah-private][3.5.x]=https://github.com/liferay/com-liferay-osb-faro-private/tree/3.1.x
+    test.batch.osb.faro.github.url[com-liferay-osb-asah-private][7.0.x]=https://github.com/liferay/com-liferay-osb-faro-private/tree/7.0.x
+    test.batch.osb.faro.github.url[com-liferay-osb-asah-private][release]=https://github.com/liferay/com-liferay-osb-faro-private/tree/3.1.x
 
     test.batch.run.property.query[functional-alpine38-tomcat90-mysql57-jdk8]=\
         (\
