LPS-169410 Add headless tests into lima batches

--- a/test.properties
+++ b/test.properties
@@ -4986,6 +4986,12 @@
         **/document-library-web-test/**/*Test.java,\
         **/friendly-url-service/**/*Test.java,\
         **/friendly-url-test/**/*Test.java,\
+        **/headless/headless-delivery/**/*BlogPosting*Test.java,\
+        **/headless/headless-delivery/**/*CommentResource*Test.java,\
+        **/headless/headless-delivery/**/*Document*Test.java,\
+        **/headless/headless-delivery/**/*KnowledgeBase*Test.java,\
+        **/headless/headless-delivery/**/*MessageBoard*Test.java,\
+        **/headless/headless-delivery/**/*Wiki*Test.java,\
         **/item-selector-taglib/**/*Test.java,\
         **/item-selector-test/**/*Test.java,\
         **/item-selector-web/**/*Test.java,\
@@ -5056,6 +5062,7 @@
             (testray.main.component.name ~ "Friendly URL Service") OR \
             (testray.main.component.name ~ "Item Selector") OR \
             (testray.main.component.name ~ "Knowledge Base") OR \
+            (testray.main.component.name ~ "Lima Headless") OR \
             (testray.main.component.name ~ "Mentions") OR \
             (testray.main.component.name ~ "Message Boards") OR \
             (testray.main.component.name ~ "Notifications") OR \
@@ -5120,6 +5127,12 @@
         **/document-library-uad-test/**/*Test.java,\
         **/document-library-video-test/**/*Test.java,\
         **/document-library-web-test/**/*Test.java,\
+        **/headless/headless-delivery/**/*BlogPosting*Test.java,\
+        **/headless/headless-delivery/**/*CommentResource*Test.java,\
+        **/headless/headless-delivery/**/*Document*Test.java,\
+        **/headless/headless-delivery/**/*KnowledgeBase*Test.java,\
+        **/headless/headless-delivery/**/*MessageBoard*Test.java,\
+        **/headless/headless-delivery/**/*Wiki*Test.java,\
         **/item-selector-taglib/**/*Test.java,\
         **/item-selector-test/**/*Test.java,\
         **/item-selector-web/**/*Test.java,\
@@ -5191,6 +5204,7 @@
             (testray.main.component.name ~ "Friendly URL Service") OR \
             (testray.main.component.name ~ "Item Selector") OR \
             (testray.main.component.name ~ "Knowledge Base") OR \
+            (testray.main.component.name ~ "Lima Headless") OR \
             (testray.main.component.name ~ "Mentions") OR \
             (testray.main.component.name ~ "Message Boards") OR \
             (testray.main.component.name ~ "Notifications") OR \
