LPS-169410 Update relevant query to contains lima headless tests

--- a/modules/apps/headless/headless-delivery/test.properties
+++ b/modules/apps/headless/headless-delivery/test.properties
@@ -8,7 +8,8 @@
 
     test.batch.run.property.query[functional-tomcat*-mysql*-jdk8][relevant]=\
         (portal.acceptance == true) AND \
-        (testray.main.component.name ~ "Headless")
+        (testray.main.component.name ~ "Headless") OR \
+        (testray.main.component.name ~ "Lima Headless")
 
 ##
 ## Testray
