--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -11652,6 +11652,7 @@ pages-option=Pages Option (Automatic Copy)
 pages-options=Pages Options (Automatic Copy)
 pages-to-export=Pages to Export (Automatic Copy)
 pages-to-publish=Pages to Publish (Automatic Copy)
+pages-type=Pages Type (Automatic Copy)
 pages-variations-help=Site Pages Variations will allow you to work in parallel in different versions of the pages of the site. Content will be shared by all your Site Pages Variations. Publication to live of any Site Pages Variation can be scheduled or done manually.
 pages-with-tag-x=Stranice sa oznakom<em>{0}</em>.
 pages-with-x-x=Stranice sa {0} <em>{1}</em>.
@@ -14236,7 +14237,6 @@ select-order-type=Select Order Type (Automatic Copy)
 select-other-item=Select Other Item (Automatic Copy)
 select-page=Select Page (Automatic Copy)
 select-page-template-set=Select Page Template Set (Automatic Copy)
-select-pages=Izaberite Stranice
 select-parent=Select Parent (Automatic Copy)
 select-parent-site=Select Parent Site (Automatic Copy)
 select-poll=Select Poll (Automatic Copy)
