--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/package.json
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/package.json
@@ -5,6 +5,7 @@
 		"@clayui/icon": "3.56.0",
 		"@clayui/panel": "3.83.1",
 		"@clayui/table": "3.56.0",
+		"classnames": "2.3.1",
 		"react": "16.12.0",
 		"react-dom": "16.12.0",
 		"yo": "^4.3.0"
