--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11592,6 +11592,7 @@ page-design-options=Page Design Options
 page-display-order=Page Display Order
 page-edition-mode-x=Page Edition Mode: {0}
 page-editor-auto-extend-session-enabled-description=Enabling will automatically extend the session while the page editor is opened.
+page-editor-autosaves-your-work=Page Editor autosaves your work
 page-editor-configuration-name=Page Editor
 page-editor-max-number-of-items-edit-mode-description=The maximum number of items that are shown in a collection are limited in the Edit mode, due to page render performance. This limit does not affect the collection visualization in the published page. Please be aware that increasing this value might have a negative impact on the performance of the Edit mode of a Content Page.
 page-elements=Page Elements
