LPS-166110 portal-language - add update strategy language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -11555,6 +11555,7 @@ overwrite-existing-entries=Overwrite Existing Entries
 overwrite-existing-page-templates=Overwrite Existing Page Templates
 overwrite-existing-style-books=Overwrite Existing Style Books
 overwrite-existing-utility-pages=Overwrite Existing Utility Pages
+overwrite-records=Overwrite Records
 overwrite-the-existing-attachment-with-the-removed-one=Overwrite the existing attachment with the removed one.
 overwrite-the-existing-entry-with-the-one-from-the-recycle-bin=Overwrite the existing entry with the one from the Recycle Bin.
 owned=Owned
@@ -18090,6 +18091,7 @@ update-booked-quantity=Update Booked Quantity
 update-cart=Update Cart
 update-categories=Update Categories
 update-category=Update Category
+update-changed-record-fields=Update Changed Record Fields
 update-column-size=Update Column Size
 update-comments=Update Comments
 update-consumer=Update Consumer
@@ -18131,6 +18133,7 @@ update-references=Update References
 update-search-index=Update Search Index
 update-service-description=Update Service Description
 update-site-pages-variation=Update Site Pages Variation
+update-strategy=Update Strategy
 update-task-due-date=Update Task Due Date
 update-tasks-due-dates=Update Tasks Due Dates
 update-the-references-of-the-other-redirects-to-avoid-this-chain=Update the references of the other redirects to avoid this chain.
