LPS-171931 Update query to run related tests

--- a/modules/dxp/apps/sharepoint-rest/test.properties
+++ b/modules/dxp/apps/sharepoint-rest/test.properties
@@ -14,7 +14,7 @@
     #
 
     test.batch.run.property.query[functional-tomcat*-mysql*-jdk8][relevant]=\
-        (osgi.app.includes ~ "sharepoint-rest") AND \
+        (osgi.modules.includes ~ "sharepoint-rest") AND \
         (portal.acceptance == true)
 
 ##
