--- a/modules/dxp/apps/sharepoint-soap/test.properties
+++ b/modules/dxp/apps/sharepoint-soap/test.properties
@@ -14,7 +14,7 @@
     #
 
     test.batch.run.property.query[functional-tomcat*-mysql*-jdk8][relevant]=\
-        (osgi.app.includes ~ "sharepoint") AND \
+        (osgi.modules.includes ~ "sharepoint-soap") AND \
         (portal.acceptance == true)
 
 ##
