--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6496,6 +6496,11 @@
     feature.flag.LPS-167932=false
 
     #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER9__NUMBER9__NUMBER2__NUMBER3_
+    #
+    feature.flag.LPS-169923=false
+
+    #
     # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER9__NUMBER9__NUMBER8__NUMBER1_
     #
     feature.flag.LPS-169981=false
