LRQA-78789 Add new test suite

--- a/ci.properties
+++ b/ci.properties
@@ -135,6 +135,7 @@ ci.test.available.suites=\
     smoke,\
     stable,\
     staging,\
+    staging-custom-db,\
     startup,\
     sybase,\
     system,\
