--- a/test.properties
+++ b/test.properties
@@ -7783,6 +7783,27 @@
         )
 
     #
+    # Staging with Custom Database
+    #
+
+    #custom.database.file.name=
+    #custom.database.zip.url=http://mirrors.sonic.net/YYY/${custom.database.zip.name}
+    #custom.database.zip.name=
+
+    test.batch.dist.app.servers[staging-custom-db]=tomcat
+
+    test.batch.names[staging-custom-db]=functional-tomcat90-mysql57-jdk8
+
+    test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][staging-custom-db]=\
+        (portal.upstream == true) AND \
+        (rebuild.staging.database == true) AND \
+        (\
+            (testray.main.component.name ~ "Export/Import Framework") OR \
+            (testray.main.component.name ~ "Site Templates") OR \
+            (testray.main.component.name ~ "Staging") \
+        )
+
+    #
     # Startup
     #
 
@@ -9031,6 +9052,7 @@
         product.team.names,\
         project.templates,\
         property.group,\
+        rebuild.staging.database,\
         release.feature.flags.disable.DISABLE_PRIVATE_LAYOUTS,\
         remote.elasticsearch.enabled,\
         search.environment.suite.exclude,\
