--- a/test.properties
+++ b/test.properties
@@ -3888,7 +3888,7 @@
             (testray.main.component.name ~ "Control Menu") OR \
             (testray.main.component.name ~ "Display Pages") OR \
             (testray.main.component.name ~ "Fragments") OR \
-            (testray.main.component.name ~ "Headless Echo") OR \
+            (testray.main.component.name ~ "Echo Headless") OR \
             (testray.main.component.name ~ "Highest Rated Assets") OR \
             (testray.main.component.name ~ "IFrame Portlet") OR \
             (testray.main.component.name ~ "Localization") OR \
@@ -3982,7 +3982,7 @@
             (testray.main.component.name ~ "Content and Application Templates") OR \
             (testray.main.component.name ~ "Display Pages") OR \
             (testray.main.component.name ~ "Fragments") OR \
-            (testray.main.component.name ~ "Headless Echo") OR \
+            (testray.main.component.name ~ "Echo Headless") OR \
             (testray.main.component.name ~ "Highest Rated Assets") OR \
             (testray.main.component.name ~ "IFrame Portlet") OR \
             (testray.main.component.name ~ "Localization") OR \
@@ -4108,7 +4108,7 @@
 
     test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-headless]=\
         (portal.upstream == true) AND \
-        (testray.main.component.name ~ "Headless Echo")
+        (testray.main.component.name ~ "Echo Headless")
 
     #
     # Echo Upgrade
@@ -9551,7 +9551,7 @@
         Flash,\
         Fragments,\
         Google,\
-        Headless Echo,\
+        Echo Headless,\
         Highest Rated Assets,\
         IFrame Portlet,\
         Info Framework,\
