--- a/modules/apps/asset/asset-categories-selector-web/test.properties
+++ b/modules/apps/asset/asset-categories-selector-web/test.properties
@@ -9,6 +9,21 @@
         **/asset-categories-test/**/*Test.java,\
 
 ##
+## Test Batch
+##
+
+    #
+    # Relevant
+    #
+
+    test.batch.run.property.query[functional-tomcat*-mysql*-jdk8][relevant]=\
+                (portal.acceptance == true) AND \
+                (\
+                    (testray.component.names ~ "Segmentation") OR \
+                    (testray.main.component.name ~ "Segmentation")\
+                )
+
+##
 ## Testray
 ##
 
