--- a/test.properties
+++ b/test.properties
@@ -8935,6 +8935,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         marketplace.staging.enabled,\
         minimum.slave.ram,\
         openam.enabled,\
+        operating.system.types,\
         osgi.app.includes,\
         osgi.module.configuration.file.names,\
         osgi.module.configurations,\
