LPS-170575 Add disappear-after-5-seconds on Language.properties file

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -5303,6 +5303,7 @@ disabled-inputs-condensed=Disabled Inputs Condensed
 disabled-inputs-condensed-with-value=Disabled Inputs Condensed With Value
 disabled-inputs-with-value=Disabled Inputs With Value
 disabling-the-recycle-bin-prevents-the-restoring-of-content-that-has-been-moved-to-the-recycle-bin=Disabling the Recycle Bin prevents the restoring of content that has been moved to the Recycle Bin.
+disappear-after-5-secs=DisappearsAfter5Secs
 disassociate=Disassociate
 discard=Discard
 discard-change=Discard Change
