--- a/modules/apps/digital-signature/digital-signature-rest-impl/rest-openapi.yaml
+++ b/modules/apps/digital-signature/digital-signature-rest-impl/rest-openapi.yaml
@@ -54,7 +54,7 @@ components:
                     type: string
         DSRecipient:
             properties:
-                clientUserId:
+                dsClientUserId:
                     type: string
                 emailAddress:
                     type: string
