--- a/modules/apps/digital-signature/digital-signature-rest-impl/rest-openapi.yaml
+++ b/modules/apps/digital-signature/digital-signature-rest-impl/rest-openapi.yaml
@@ -72,7 +72,7 @@ components:
                     type: string
                 emailAddress:
                     type: string
-                returnUrl:
+                returnURL:
                     type: string
                 userName:
                     type: string
