LPS-171486 Adds required dependency

--- a/modules/apps/client-extension/client-extension-test/build.gradle
+++ b/modules/apps/client-extension/client-extension-test/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
 	testIntegrationCompile project(":apps:client-extension:client-extension-api")
+	testIntegrationCompile project(":apps:layout:layout-content-page-editor-api")
 	testIntegrationCompile project(":apps:layout:layout-page-template-api")
 	testIntegrationCompile project(":apps:layout:layout-test-util")
 	testIntegrationCompile project(":apps:portal-configuration:portal-configuration-test-util")
