LPS-172295 Apply usage

--- a/lib/portal/dependencies.properties
+++ b/lib/portal/dependencies.properties
@@ -24,7 +24,7 @@ portlet=javax.portlet:portlet-api:3.0.1
 slf4j-api=org.slf4j:slf4j-api:1.7.26
 soap-api=javax.xml.soap:javax.xml.soap-api:1.4.0
 spring-aop=org.springframework:spring-aop:5.2.22.RELEASE
-spring-beans=org.springframework:spring-beans:5.2.22.RELEASE
+spring-beans=com.liferay:org.springframework.beans:5.2.22.LIFERAY-PATCHED-1
 spring-context=org.springframework:spring-context:5.2.22.RELEASE
 spring-core=org.springframework:spring-core:5.2.22.RELEASE
 spring-expression=org.springframework:spring-expression:5.2.22.RELEASE
