LRCI-3217 Add operating.system.types to the environment.acceptance PQL

--- a/modules/core/test.properties
+++ b/modules/core/test.properties
@@ -29,4 +29,8 @@
         (\
             (database.types == null) OR \
             (database.types ~ "mysql")\
+        ) AND \
+        (\
+            (operating.system.types == null) OR \
+            (operating.system.types ~ "centos")\
         )
