--- a/test.properties
+++ b/test.properties
@@ -1195,7 +1195,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ alpine)
 
     test.batch.run.property.query[functional-alpine310-tomcat90-mysql57-jdk8]=\
         (\
@@ -1203,7 +1204,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ alpine)
 
     test.batch.run.property.query[functional-amazonlinux2-tomcat90-mysql57-jdk8]=\
         (\
@@ -1211,7 +1213,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ amazonlinux)
 
     test.batch.run.property.query[functional-amazonlinux2022-tomcat90-mysql57-jdk8]=\
         (\
@@ -1219,7 +1222,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ amazonlinux)
 
     test.batch.run.property.query[functional-centos6-tomcat90-mysql57-jdk8]=\
         (\
@@ -1227,7 +1231,11 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (\
+            (operating.system.types == null) OR \
+            (operating.system.types ~ centos)\
+        )
 
     test.batch.run.property.query[functional-centos8-tomcat90-mysql57-jdk8]=\
         (\
@@ -1235,7 +1243,11 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (\
+            (operating.system.types == null) OR \
+            (operating.system.types ~ centos)\
+        )
 
     test.batch.run.property.query[functional-debian7-tomcat90-mysql57-jdk8]=\
         (\
@@ -1243,7 +1255,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ debian)
 
     test.batch.run.property.query[functional-debian8-tomcat90-mysql57-jdk8]=\
         (\
@@ -1251,7 +1264,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ debian)
 
     test.batch.run.property.query[functional-debian9-tomcat90-mysql57-jdk8]=\
         (\
@@ -1259,7 +1273,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ debian)
 
     test.batch.run.property.query[functional-debian11-tomcat90-mysql57-jdk8]=\
         (\
@@ -1267,7 +1282,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ debian)
 
     test.batch.run.property.query[functional-fedora35-tomcat90-mysql57-jdk8]=\
         (\
@@ -1275,7 +1291,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ fedora)
 
     test.batch.run.property.query[functional-orcllinux6-tomcat90-mysql57-jdk8]=\
         (\
@@ -1283,7 +1300,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ orcllinux)
 
     test.batch.run.property.query[functional-orcllinux7-tomcat90-mysql57-jdk8]=\
         (\
@@ -1291,7 +1309,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ orcllinux)
 
     test.batch.run.property.query[functional-orcllinux8-tomcat90-mysql57-jdk8]=\
         (\
@@ -1299,7 +1318,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ orcllinux)
 
     test.batch.run.property.query[functional-redhat8-tomcat90-mysql57-jdk8]=\
         (\
@@ -1307,7 +1327,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ redhat)
 
     test.batch.run.property.query[functional-redhat9-tomcat90-mysql57-jdk8]=\
         (\
@@ -1315,7 +1336,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ redhat)
 
     test.batch.run.property.query[functional-smoke-bundle-jboss-mysql57-jdk8]=\
         (app.server.types ~ jboss) AND \
@@ -1942,7 +1964,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ suse)
 
     test.batch.run.property.query[functional-tomcat80-db2111-jdk8]=\
         (\
@@ -2295,7 +2318,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ ubuntu)
 
     test.batch.run.property.query[functional-ubuntu16-tomcat90-mysql57-jdk8]=\
         (\
@@ -2303,7 +2327,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ ubuntu)
 
     test.batch.run.property.query[functional-ubuntu18-tomcat90-mysql57-jdk8]=\
         (\
@@ -2311,7 +2336,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ ubuntu)
 
     test.batch.run.property.query[functional-ubuntu20-tomcat90-mysql57-jdk8]=\
         (\
@@ -2319,7 +2345,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ ubuntu)
 
     test.batch.run.property.query[functional-ubuntu22-tomcat90-mysql57-jdk8]=\
         (\
@@ -2327,7 +2354,8 @@
             (app.server.types ~ tomcat)\
         ) AND \
         (database.types ~ mysql) AND \
-        (environment.acceptance == true)
+        (environment.acceptance == true) AND \
+        (operating.system.types ~ ubuntu)
 
     test.batch.run.property.query[functional-upgrade-jboss73-mysql57-jdk8]=\
         (app.server.types ~ jboss) AND \
