--- a/portal-impl/test.properties
+++ b/portal-impl/test.properties
@@ -29,4 +29,8 @@
         (\
             (database.types == null) OR \
             (database.types ~ "mysql")\
+        ) AND \
+        (\
+            (operating.system.types == null) OR \
+            (operating.system.types ~ "centos")\
         )
