--- a/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-account-test/build.gradle
+++ b/modules/apps/commerce/headless/headless-commerce/headless-commerce-admin-account-test/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 	testIntegrationCompile project(":apps:commerce:commerce-api")
 	testIntegrationCompile project(":apps:commerce:commerce-currency-api")
 	testIntegrationCompile project(":apps:commerce:commerce-discount-api")
+	testIntegrationCompile project(":apps:commerce:commerce-payment-api")
 	testIntegrationCompile project(":apps:commerce:commerce-price-list-api")
 	testIntegrationCompile project(":apps:commerce:commerce-product-api")
 	testIntegrationCompile project(":apps:commerce:commerce-term-api")
