LPS-166396 Add to testcase properties list

--- a/test.properties
+++ b/test.properties
@@ -8885,6 +8885,7 @@ test.batch.run.property.query[functional-tomcat90-mysql57-jdk8][echo-db-partitio
         content.targeting.release,\
         create.osgi.hidden.file,\
         custom.element.client.extension.created,\
+        custom.mysql.sql.statement,\
         custom.properties,\
         custom.system.properties,\
         data.archive.type,\
