COMMERCE-9974 Support Search on the Headless Delivery Catalog API (yaml)

--- a/modules/apps/commerce/headless/headless-commerce/headless-commerce-delivery-catalog-impl/rest-openapi.yaml
+++ b/modules/apps/commerce/headless/headless-commerce/headless-commerce-delivery-catalog-impl/rest-openapi.yaml
@@ -807,6 +807,11 @@ paths:
                   schema:
                       type: integer
                 - in: query
+                  name: search
+                  required: false
+                  schema:
+                      type: string
+                - in: query
                   name: sort
                   required: false
                   schema:
