LPS-172040 Auto SF

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -6421,6 +6421,11 @@
     feature.flag.LPS-161364=false
 
     #
+    # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER1__NUMBER6__NUMBER3__NUMBER1_
+    #
+    feature.flag.LPS-161631=false
+
+    #
     # Env: LIFERAY_FEATURE_PERIOD_FLAG_PERIOD__UPPERCASEL__UPPERCASEP__UPPERCASES__MINUS__NUMBER1__NUMBER6__NUMBER2__NUMBER7__NUMBER6__NUMBER5_
     #
     feature.flag.LPS-162765=false
