Regen portal-impl/src/portal-osgi-configuration.properties

--- a/portal-impl/src/portal-osgi-configuration.properties
+++ b/portal-impl/src/portal-osgi-configuration.properties
@@ -5059,6 +5059,22 @@
     #
     #configuration.override.com.liferay.portal.template.velocity.configuration.VelocityEngineConfiguration_loggerCategory=
     #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_VULCAN_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEV_ULCAN_UPPERCASEC_OMPANY_UPPERCASEC_ONFIGURATION_UNDERLINE_PATH
+    #
+    #configuration.override.com.liferay.portal.vulcan.internal.configuration.VulcanCompanyConfiguration_path=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_VULCAN_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEV_ULCAN_UPPERCASEC_OMPANY_UPPERCASEC_ONFIGURATION_UNDERLINE_GRAPH_UPPERCASEQ__UPPERCASEL__UPPERCASEE_NABLED
+    #
+    #configuration.override.com.liferay.portal.vulcan.internal.configuration.VulcanCompanyConfiguration_graphQLEnabled=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_VULCAN_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEV_ULCAN_UPPERCASEC_OMPANY_UPPERCASEC_ONFIGURATION_UNDERLINE_REST_UPPERCASEE_NABLED
+    #
+    #configuration.override.com.liferay.portal.vulcan.internal.configuration.VulcanCompanyConfiguration_restEnabled=
+    #
+    # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_VULCAN_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEV_ULCAN_UPPERCASEC_OMPANY_UPPERCASEC_ONFIGURATION_UNDERLINE_EXCLUDED_UPPERCASEO_PERATION_UPPERCASEI_DS
+    #
+    #configuration.override.com.liferay.portal.vulcan.internal.configuration.VulcanCompanyConfiguration_excludedOperationIds=
+    #
     # Env: LIFERAY_CONFIGURATION_PERIOD_OVERRIDE_PERIOD_COM_PERIOD_LIFERAY_PERIOD_PORTAL_PERIOD_VULCAN_PERIOD_INTERNAL_PERIOD_CONFIGURATION_PERIOD__UPPERCASEV_ULCAN_UPPERCASEC_ONFIGURATION_UNDERLINE_PATH
     #
     #configuration.override.com.liferay.portal.vulcan.internal.configuration.VulcanConfiguration_path=
