LPS-172040 Language key

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language.properties
@@ -18762,6 +18762,7 @@ vocabularies-are-needed-to-create-categories=Vocabularies are needed to create c
 vocabularies-help=Represents the list of vocabularies that are displayed in the Categories Navigation.
 vocabularies-without-categories-are-hidden-from-navigation-menus=Vocabularies without categories are hidden from Navigation Menus.
 vocabulary=Vocabulary
+vocabulary-visibility=Vocabulary Visibility
 void=Void
 volume=Volume
 vote=Vote
