--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS_latin.properties
@@ -14298,7 +14298,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Izaberit
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Izaberite opseg delovanja te uloge ovo može obavljati na <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Izaberite opseg delovanja te uloge ovo može obavljati na <em>{0}</em> portletu.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Izaberite opseg delovanja te uloge ovo može obavljati na <em>{0}</em> resursu.
-select-the-scope-of-your-segment=Select the scope of your segment to specify where it can be used. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
 select-the-searchable-types-description=Select the assets and objects to be searched. If no types are selected, all are searched. To disable all types, disable the search framework indexer clauses setting. (Automatic Copy)
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Izaberite sajtove na kojima ova uloga može da obavlja <em>{0}</em>akciju na {1} portletu.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Izaberite sajtove na kojima ova uloga može da obavlja <em>{0}</em> akciju na {1} resursu.
